--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^6.1.6",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
